# streaming-svd

./: .gitignore  CLAUDE.md  PLAN.md  PROGRESS.md  QUICK_START.txt  README.md  pyproject.toml
analysis/hurricane/: analyze.py  analyze_unified.py  plot.py  plot_adaptive.py
analysis/static/: analyze_static.py
cpp/: CMakeLists.txt  README.md
cpp/include/: csv_writer.hpp  dumb_warm_rsvd.hpp  matrix_types.hpp  rsvd.hpp  warm_rsvd.hpp
cpp/src/: adaptive_csv_writer.cpp  adaptive_experiment.cpp  csv_writer.cpp  data_loader.cpp  dumb_warm_rsvd.cpp  hurricane_dumb_experiment.cpp  hurricane_experiment.cpp  metrics.cpp  rsvd.cpp  static_adaptive_experiment.cpp  warm_rsvd.cpp
data/: readme.txt
docs/: RSVD_README.md
phase1_python_prototype/notebooks/: 01_explore_Uf01.ipynb
phase1_python_prototype/scripts/preliminary/: replot_sweep_results.py
phase1_python_prototype/src/streaming_svd/: __init__.py
phase1_python_prototype/src/streaming_svd/algos/: metrics.py  warm_rsvd.py
phase1_python_prototype/src/streaming_svd/experiments/: run_sweep.py
phase1_python_prototype/src/streaming_svd/experiments/hurricane/: __init__.py  characterize.py
phase1_python_prototype/src/streaming_svd/sims/: __init__.py
phase1_python_prototype/src/streaming_svd/utils/: __init__.py
phase2_cpp/: CMakeLists.txt  README.md
phase2_cpp/include/: adaptive_csv_writer.hpp  csv_writer.hpp  data_loader.hpp  metrics.hpp  rng.hpp  timer.hpp
phase2_cpp/src/: csv_writer.cpp  data_loader.cpp  hurricane_dumb_experiment.cpp  hurricane_experiment.cpp  unified_adaptive_experiment.cpp
scripts/: analyze_sweep.py  run_isabel_sweep.py  run_static_sweep.py  run_sweep.py
src/streaming_svd/: __init__.py
src/streaming_svd/algos/: __init__.py  metrics.py  rsvd.py  warm_rsvd.py
src/streaming_svd/data/: __init__.py
src/streaming_svd/experiments/: IMPLEMENTATION_SUMMARY.md  RUN_SWEEP_README.md  __init__.py  run_series.py  run_sweep.py  run_synthetic.py  run_weather.py
src/streaming_svd/experiments/hurricane/: collect.py
src/streaming_svd/sims/: __init__.py  perturbation.py  rotating.py  series.py
src/streaming_svd/utils/: __init__.py
tests/: __init__.py  test_rsvd_basic.py
